# DUKS-poc-replication-package

./: README.md  codemeta.json  compose-production.yaml  compose.yaml  create_mock_dataset.ipynb  dev-compose.yaml  docker-compose.yaml
data/: mock1.csv
nginx/: nginx.conf
scripts/: enrich_from_git.py  get_official_kernel_maintainers.py  git_status.py  git_status_last_step.py  grpc_script.py  pyproject.toml  stitch_data_into_final_payload.py
server/: Containerfile.prod  Dockerfile  app.py  data_loader.py  pyproject.toml  requirements.txt
server/static/: index.html  script.js  style.css
web/: index.html  script.js
