[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.1",
    "grpcio>=1.73.1",
    "orjson>=3.10.18",
    "polars[pyarrow]>=1.31.0",
    "pygit2>=1.18.0",
    "swh-graph>=7.0.0",
]

[tool.setuptools]
py-modules = []
# packages = [
# 	"enrich_from_git.py",
# 	"get_official_kernel_maintainers.py",
# 	"grpc_script.py",
# 	"stitch_data_into_final_payload.py"
# ]
