[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "orjson>=3.10.18",
    "pandas>=2.3.0",
    "polars>=1.30.0",
]


[tool.hatch.build.targets.wheel]
packages = ["./app.py"]
