[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "orjson>=3.10.18",
    "polars>=1.30.0",
]


[tool.hatch.build.targets.wheel]
packages = ["./app.py"]
